src/snapshots/rontodoc__components__tests__snapshots__snapshot_class_card_minimal.snap
---
source: src/components.rs
assertion_line: 560
expression: html
---
<article class="entity-card class-card" id="class-thing">
    <header class="entity-header">
        <div class="entity-badge class-badge">Class</div>
        <h3 class="entity-title">Thing</h3>
        <button class="copy-btn" data-copy="https://example.org/ontology#Thing" title="Copy IRI">
            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
            </svg>
        </button>
    </header>

    <div class="entity-iri">
        <code class="mono">https://example.org/ontology#Thing</code>
    </div>

    <div class="entity-details">
    </div>
</article>
<style>
    .entity-card {
        background-color: var(--color-bg);
        border: 1px solid var(--color-border);
        border-radius: var(--radius-lg);
        padding: var(--space-6);
        margin-bottom: var(--space-6);
        transition: box-shadow var(--transition-fast);
    }

    .entity-card:hover {
        box-shadow: var(--shadow-md);
    }

    .entity-card:target {
        box-shadow: 0 0 0 2px var(--color-primary);
    }

    .entity-header {
        display: flex;
        align-items: center;
        gap: var(--space-3);
        margin-bottom: var(--space-2);
    }

    .entity-badge {
        display: inline-flex;
        align-items: center;
        padding: var(--space-1) var(--space-2);
        font-size: var(--text-xs);
        font-weight: 600;
        text-transform: uppercase;
        letter-spacing: 0.05em;
        border-radius: var(--radius-sm);
    }

    .class-badge {
        background-color: color-mix(in srgb, var(--color-class) 15%, transparent);
        color: var(--color-class);
    }

    .entity-title {
        flex: 1;
        margin: 0;
        font-size: var(--text-lg);
        font-weight: 600;
        color: var(--color-text);
    }

    .entity-header .copy-btn {
        display: inline-flex;
        align-items: center;
        justify-content: center;
        padding: var(--space-2);
        background: none;
        border: none;
        color: var(--color-text-muted);
        cursor: pointer;
        border-radius: var(--radius-sm);
        opacity: 0;
        transition: opacity var(--transition-fast), color var(--transition-fast);
    }

    .entity-card:hover .copy-btn {
        opacity: 1;
    }

    .entity-header .copy-btn:hover {
        color: var(--color-primary);
        background-color: var(--color-bg-tertiary);
    }

    .entity-header .copy-btn.copied {
        color: var(--color-property);
    }

    .entity-iri {
        margin-bottom: var(--space-4);
    }

    .entity-iri code {
        color: var(--color-text-muted);
        font-size: var(--text-sm);
        word-break: break-all;
    }

    .entity-description {
        margin: 0 0 var(--space-4) 0;
        color: var(--color-text);
        line-height: 1.7;
    }

    .entity-details {
        display: grid;
        gap: var(--space-3);
        padding-top: var(--space-4);
        border-top: 1px solid var(--color-border);
    }

    .detail-row {
        display: grid;
        grid-template-columns: 120px 1fr;
        gap: var(--space-3);
        font-size: var(--text-sm);
    }

    .detail-row dt {
        font-weight: 500;
        color: var(--color-text-muted);
    }

    .detail-row dd {
        margin: 0;
    }

    .entity-ref {
        display: inline-flex;
        align-items: center;
        padding: var(--space-1) var(--space-2);
        background-color: var(--color-bg-secondary);
        border-radius: var(--radius-sm);
        font-size: var(--text-sm);
        transition: background-color var(--transition-fast);
    }

    .entity-ref:hover {
        text-decoration: none;
    }

    .class-ref {
        color: var(--color-class);
    }

    .class-ref:hover {
        background-color: color-mix(in srgb, var(--color-class) 10%, transparent);
    }

    .prop-ref {
        color: var(--color-property);
    }

    .prop-ref:hover {
        background-color: color-mix(in srgb, var(--color-property) 10%, transparent);
    }

    @media (max-width: 640px) {
        .entity-card {
            padding: var(--space-4);
        }

        .detail-row {
            grid-template-columns: 1fr;
            gap: var(--space-1);
        }

        .entity-header .copy-btn {
            opacity: 1;
        }
    }
</style>
