src/snapshots/rontodoc__components__tests__snapshots__snapshot_header.snap
---
source: src/components.rs
assertion_line: 210
expression: html
---
<header class="site-header">
    <div class="container">
        <nav class="header-nav">
            <a href="/" class="site-title">Test Ontology</a>
            <ul class="nav-links">
                <li><a href="#overview">Overview</a></li>
                <li><a href="#classes">Classes</a></li>
                <li><a href="#properties">Properties</a></li>
            </ul>
        </nav>
    </div>
</header>
<style>
    .site-header {
        background-color: var(--color-bg-secondary);
        border-bottom: 1px solid var(--color-border);
        padding: 1rem 0;
    }

    .header-nav {
        display: flex;
        align-items: center;
        justify-content: space-between;
        flex-wrap: wrap;
        gap: 1rem;
    }

    .site-title {
        font-size: 1.25rem;
        font-weight: 600;
        color: var(--color-text);
    }

    .site-title:hover {
        text-decoration: none;
        color: var(--color-primary);
    }

    .nav-links {
        display: flex;
        list-style: none;
        margin: 0;
        padding: 0;
        gap: 1.5rem;
    }

    .nav-links a {
        color: var(--color-text-muted);
        font-size: 0.875rem;
    }

    .nav-links a:hover {
        color: var(--color-primary);
    }
</style>
