src/snapshots/rontodoc__components__tests__snapshots__snapshot_individual_card_full.snap
---
source: src/components.rs
assertion_line: 836
expression: html
---
<article class="entity-card individual-card" id="ind-john-doe">
    <header class="entity-header">
        <div class="entity-badge individual-badge">Individual</div>
        <h3 class="entity-title">John Doe</h3>
        <button class="copy-btn" data-copy="https://example.org/ontology#JohnDoe" title="Copy IRI">
            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
            </svg>
        </button>
    </header>

    <div class="entity-iri">
        <code class="mono">https://example.org/ontology#JohnDoe</code>
    </div>

    <p class="entity-description">A sample individual representing a person.</p>

    <div class="entity-details">
        <div class="detail-row">
            <dt>Type</dt>
            <dd>
                <a href="#class-person" class="entity-ref class-ref">Person</a>
            </dd>
        </div>
        <div class="detail-row">
            <dt>
                <a href="#prop-name" class="entity-ref prop-ref">name</a>
            </dt>
            <dd>John Doe</dd>
        </div>
        <div class="detail-row">
            <dt>
                <a href="#prop-member-of" class="entity-ref prop-ref">memberOf</a>
            </dt>
            <dd>Acme Corp</dd>
        </div>
    </div>
</article>
<style>
    .individual-badge {
        background-color: color-mix(in srgb, var(--color-individual) 15%, transparent);
        color: var(--color-individual);
    }
</style>
