src/snapshots/rontodoc__components__tests__snapshots__snapshot_metadata_card_minimal.snap
---
source: src/components.rs
assertion_line: 556
expression: html
---
<section class="metadata-card" id="overview">
    <h2 class="metadata-heading">Overview</h2>
    <dl class="metadata-list">
        <div class="metadata-item">
            <dt>IRI</dt>
            <dd class="mono">https://example.org/ontology/test</dd>
        </div>
    </dl>
</section>
<style>
    .metadata-card {
        background-color: var(--color-bg-secondary);
        border: 1px solid var(--color-border);
        border-radius: 0.5rem;
        padding: 1.5rem;
        margin: 1.5rem 0;
    }

    .metadata-heading {
        margin: 0 0 1rem 0;
        font-size: 1.125rem;
        color: var(--color-text);
    }

    .metadata-list {
        margin: 0;
        display: grid;
        gap: 1rem;
    }

    .metadata-item {
        display: grid;
        grid-template-columns: 120px 1fr;
        gap: 0.5rem;
    }

    .metadata-item dt {
        font-weight: 600;
        color: var(--color-text-muted);
        font-size: 0.875rem;
    }

    .metadata-item dd {
        margin: 0;
        word-break: break-word;
    }

    @media (max-width: 480px) {
        .metadata-item {
            grid-template-columns: 1fr;
        }
    }
</style>
