src/snapshots/rontodoc__components__tests__snapshots__snapshot_namespace_table.snap
---
source: src/components.rs
assertion_line: 593
expression: html
---
<div class="namespace-table">
    <div class="table-container">
        <table class="ns-table">
            <thead>
                <tr>
                    <th>Prefix</th>
                    <th>Namespace IRI</th>
                </tr>
            </thead>
            <tbody>
                <tr>
                    <td class="ns-prefix"><code>ex</code></td>
                    <td class="ns-iri">
                        <code class="mono">https://example.org/ontology#</code>
                        <button class="copy-btn" data-copy="https://example.org/ontology#" title="Copy IRI">
                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
                            </svg>
                        </button>
                    </td>
                </tr>
                <tr>
                    <td class="ns-prefix"><code>rdf</code></td>
                    <td class="ns-iri">
                        <code class="mono">http://www.w3.org/1999/02/22-rdf-syntax-ns#</code>
                        <button class="copy-btn" data-copy="http://www.w3.org/1999/02/22-rdf-syntax-ns#" title="Copy IRI">
                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
                            </svg>
                        </button>
                    </td>
                </tr>
                <tr>
                    <td class="ns-prefix"><code>rdfs</code></td>
                    <td class="ns-iri">
                        <code class="mono">http://www.w3.org/2000/01/rdf-schema#</code>
                        <button class="copy-btn" data-copy="http://www.w3.org/2000/01/rdf-schema#" title="Copy IRI">
                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
                            </svg>
                        </button>
                    </td>
                </tr>
            </tbody>
        </table>
    </div>
</div>
<style>
    .table-container {
        overflow-x: auto;
        border: 1px solid var(--color-border);
        border-radius: var(--radius-md);
    }

    .ns-table {
        width: 100%;
        border-collapse: collapse;
        font-size: var(--text-sm);
    }

    .ns-table th,
    .ns-table td {
        padding: var(--space-3) var(--space-4);
        text-align: left;
    }

    .ns-table th {
        background-color: var(--color-bg-secondary);
        font-weight: 600;
        color: var(--color-text-muted);
        font-size: var(--text-xs);
        text-transform: uppercase;
        letter-spacing: 0.05em;
        border-bottom: 1px solid var(--color-border);
    }

    .ns-table tbody tr {
        border-bottom: 1px solid var(--color-border);
    }

    .ns-table tbody tr:last-child {
        border-bottom: none;
    }

    .ns-table tbody tr:hover {
        background-color: var(--color-bg-secondary);
    }

    .ns-prefix code {
        background-color: var(--color-bg-tertiary);
        padding: var(--space-1) var(--space-2);
        border-radius: var(--radius-sm);
        font-weight: 500;
        color: var(--color-primary);
    }

    .ns-iri {
        display: flex;
        align-items: center;
        gap: var(--space-2);
    }

    .ns-iri code {
        color: var(--color-text-muted);
        word-break: break-all;
    }

    .copy-btn {
        display: inline-flex;
        align-items: center;
        justify-content: center;
        padding: var(--space-1);
        background: none;
        border: none;
        color: var(--color-text-muted);
        cursor: pointer;
        border-radius: var(--radius-sm);
        opacity: 0;
        transition: opacity var(--transition-fast), color var(--transition-fast);
    }

    .ns-table tbody tr:hover .copy-btn {
        opacity: 1;
    }

    .copy-btn:hover {
        color: var(--color-primary);
        background-color: var(--color-bg-tertiary);
    }

    .copy-btn.copied {
        color: var(--color-property);
    }

    @media (max-width: 640px) {
        .ns-table th,
        .ns-table td {
            padding: var(--space-2) var(--space-3);
        }

        .copy-btn {
            opacity: 1;
        }
    }
</style>
<script>
    document.querySelectorAll('.copy-btn').forEach(btn => {
        btn.addEventListener('click', async () => {
            const text = btn.dataset.copy;
            await navigator.clipboard.writeText(text);
            btn.classList.add('copied');
            setTimeout(() => btn.classList.remove('copied'), 1500);
        });
    });
</script>
